2005-07-01  Dan Winship  <danw@novell.com>

	* libstetic/wrapper/objects.xml: new XML description of widgets,
	replacing the Register() methods and a lot of miscellaneous
	property attributes.

	* libstetic/CommandAttribute.cs: 
	* libstetic/DescriptionAttribute.cs: 
	* libstetic/ObjectWrapperAttribute.cs: 
	* libstetic/ObjectWrapperType.cs: 
	* libstetic/RangeAttribute.cs: gone (replaced by XML attributes)

	* libstetic/ItemGroup.cs: construct from XML

	* libstetic/ItemDescriptor.cs: construct from XML
	(EnabledFor, VisibleFor): take the widget as an argument rather
	than the wrapper

	* libstetic/PropertyDescriptor.cs: construct from XML, remove
	slashed property names
	(GetValue, SetValue): take the widget rather than the wrapper

	* libstetic/CommandDescriptor.cs: construct from XML
	(Enabled, Run): take the widget rather than the wrapper

	* libstetic/Registry.cs: New static class that handles keeping
	track of ObjectWrappers and ClassDescriptors.

	* libstetic/ClassDescriptor.cs: new, describes a class. Takes on a
	lot of functionality that used to be in static ObjectWrapper
	methods. Also, having ItemGroups, etc stored on a ClassDescriptor
	object means we don't need a ObjectWrapper subclass for each
	wrapped class (unless the wrapper implements some special
	functionality).

	* libstetic/ObjectWrapper.cs: Remove a lot of static methods,
	which are now handled by Registry and ClassDescriptor.

	* libstetic/GladeUtils.cs: Misc updates for Registry/ObjectWrapper
	changes

	* libstetic/wrapper/*.cs: remove Register() and various other
	no-longer-needed things
	
	* libstetic/wrapper/Alignment.cs:
	* libstetic/wrapper/Arrow.cs:
	* libstetic/wrapper/Calendar.cs:
	* libstetic/wrapper/CheckMenuItem.cs:
	* libstetic/wrapper/DrawingArea.cs:
	* libstetic/wrapper/Entry.cs:
	* libstetic/wrapper/EventBox.cs:
	* libstetic/wrapper/HBox.cs:
	* libstetic/wrapper/HButtonBox.cs:
	* libstetic/wrapper/HPaned.cs:
	* libstetic/wrapper/HSeparator.cs:
	* libstetic/wrapper/Menu.cs: